--- a/config/upf.yaml
+++ b/config/upf.yaml
@@ -140,7 +140,7 @@ upf:
     pfcp:
       - addr: 127.0.0.7
     gtpu:
-      - addr: 10.10.1.1
+      - addr: 127.0.0.7  #10.10.1.1
     subnet:
       - addr: 10.45.0.1/16
       - addr: 2001:230:cafe::1/48
