--- a/config/upf.yaml
+++ b/config/upf.yaml
@@ -140,7 +140,7 @@ upf:
     pfcp:
       - addr: 127.0.0.7
     gtpu:
-      - addr: 127.0.0.7  #10.10.1.1
+      - addr: 10.10.1.2  #basically because the ICMP ping request tries to reach this address as destination but if it isn’t an address that is reachable by 10.10.1.1 (such as 127.0.0.7 - like it was before), then it says destination unreachable and gives up
     subnet:
       - addr: 10.45.0.1/16
       - addr: 2001:230:cafe::1/48
